--- a/CSS/third-section.css
+++ b/CSS/third-section.css
@@ -6,18 +6,20 @@
 .third-section-align{
     display:flex;
     flex-direction: row;
+    justify-content: space-between
+    ;
 }
 .third-section-img{
-    width:35%
+    width:45%
 }
 .third-img{
     width: 100%;
+    border-radius: 16px;
 }
 
 .third-text{
-    width:35%;
+    width:50%;
     color: #F8F8F8;
-    margin-right: auto;
     margin-left: 90px;
 
     
@@ -32,12 +34,12 @@
     line-height: 44px;
 }
 .third-text-body{
-font-family: 'Lexend', sans-serif;
-font-size: 22px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
-margin-bottom: 70px;
+    font-family: 'Lexend', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 70px;
 }
 .third-text-topcs{
     margin-bottom: 20px;
